# zed-cl

./: .gitignore  Cargo.toml  Cargo.workspace.toml  Makefile  README.md  extension.toml
.zed/: tasks.json
examples/: common-lisp-examples.lisp  multi-package-test.lisp  rich-output-examples.lisp  using-shared-repl.lisp
kernels/commonlisp/: kernel.json
languages/commonlisp/: config.toml  highlights.scm  runnables.scm
scripts/: connect-repl.lisp  connect-repl.sh  verify-repl.lisp
src/: lib.rs
src/zed-cl-common/: Cargo.toml
src/zed-cl-common/src/: config.rs  lib.rs  master_repl.rs  protocol.rs
src/zed-cl-index/: Cargo.toml
src/zed-cl-index/src/: extractor.rs  index.rs  lib.rs  main.rs  query.rs
src/zed-cl-kernel/: Cargo.toml
src/zed-cl-kernel/src/: connection.rs  kernel.rs  main.rs
src/zed-cl-lsp/: Cargo.toml
src/zed-cl-lsp/src/: backend.rs  document.rs  main.rs  symbol_extractor.rs  symbol_index.rs  user_index.rs
src/zed-cl-repl/: Cargo.toml
src/zed-cl-repl-impl/: bootstrap.lisp  compat.lisp  config.lisp  display.lisp  master-repl.lisp  socket-server.lisp  start-master-repl.lisp  start-repl.sh  zed-cl.asd
src/zed-cl-repl/src/: main.rs
