[package]
name = "common-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

# Serialization for REPL protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-lexpr = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Finding executables
which = "8.0"

[lib]
name = "common_rust"
path = "src/lib.rs"
