[package]
name = "zed-cl-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zed-cl-index"
path = "src/main.rs"

[lib]
name = "zed_cl_indexer"
path = "src/lib.rs"

[dependencies]
redb = "2.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
walkdir = "2.5"
tree-sitter = "0.25"
tree-sitter-commonlisp = { path = "../../grammars/commonlisp" }
regex = "1.10"

# Share the symbol extractor code
common-rust = { path = "../zed-cl-common" }
