[package]
name = "zed-cl-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Jupyter protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
zeromq = { version = "0.5.0", features = ["tokio-runtime"] }

# Master REPL communication
common-rust = { path = "../zed-cl-common" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
data-encoding = "2.5"
bytes = "1.5"

# HMAC for message signing (same as runtimelib)
aws-lc-rs = "1.10"

[[bin]]
name = "zed-cl-kernel"
path = "src/main.rs"
